--- a/02_Scripts/ASM_Process.ipynb
+++ b/02_Scripts/ASM_Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "674b0be8",
+   "id": "6ba0e279",
    "metadata": {},
    "source": [
     "# ASM Processing"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51449b1d",
+   "id": "0c74899b",
    "metadata": {},
    "source": [
     "'''\n",
@@ -25,9 +25,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2376e08",
+   "id": "10f1fca7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-8b4c9c9995b3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0marcpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# pip install geopandas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mshapely\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgeometry\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLineString\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import arcpy\n",
@@ -45,18 +57,59 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "689df551",
+   "id": "f31513d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'C:\\Program' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
-    "#pip install geopandas\n",
-    "#pip install contextily"
+    "pip install geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "859f598b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'C:\\Program' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install contextily"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "049c567a",
+   "id": "15db94d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c723822c",
+   "id": "ec999e52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "31f26a53",
+   "id": "64565531",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "623fdb93",
+   "id": "6f630499",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f982b741",
+   "id": "aec1fac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c8141a",
+   "id": "2c95bb21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aab3590",
+   "id": "30d183f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22147155",
+   "id": "871a8842",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfa9496c",
+   "id": "56ec8d46",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -380,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
